--- a/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Sulphides pct for Density_1D.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Sulphides pct for Density_1D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,31 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "encoded_data = two_composite_1covariates_1hole.copy()\n",
-    "\n",
-    "threshold = 10\n",
-    "\n",
-    "for column in two_composite_1covariates_1hole.columns:\n",
-    "    if two_composite_1covariates_1hole[column].dtype == 'object':\n",
-    "        unique_values = two_composite_1covariates_1hole[column].nunique()\n",
-    "        \n",
-    "        # Check if the number of unique values is within the threshold\n",
-    "        if unique_values <= threshold:\n",
-    "            # Perform one-hot encoding for columns with unique values within the threshold\n",
-    "            encoded_columns = pd.get_dummies(encoded_data[column], prefix=column)\n",
-    "            encoded_columns = encoded_columns.astype(int)  # Convert to integers (0 or 1)\n",
-    "            encoded_data = pd.concat([encoded_data, encoded_columns], axis=1)\n",
-    "            encoded_data = encoded_data.drop(columns=[column])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,89 +76,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Name</th>\n",
        "      <th>X</th>\n",
        "      <th>Y</th>\n",
        "      <th>Z</th>\n",
        "      <th>Density_gcm3</th>\n",
+       "      <th>Sulph1_Code</th>\n",
        "      <th>Sulph1_Pct</th>\n",
+       "      <th>Sulph2_Code</th>\n",
        "      <th>Sulph2_Pct</th>\n",
-       "      <th>Name_KV139</th>\n",
-       "      <th>Sulph1_Code_CP</th>\n",
-       "      <th>Sulph1_Code_PO</th>\n",
-       "      <th>Sulph2_Code_CP</th>\n",
-       "      <th>Sulph2_Code_PO</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>11499</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3498896.02</td>\n",
        "      <td>7512447.42</td>\n",
        "      <td>216.26</td>\n",
        "      <td>2.95</td>\n",
+       "      <td>PO</td>\n",
        "      <td>1.00</td>\n",
+       "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11500</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3498896.69</td>\n",
        "      <td>7512447.35</td>\n",
        "      <td>214.38</td>\n",
        "      <td>3.01</td>\n",
+       "      <td>PO</td>\n",
        "      <td>1.10</td>\n",
+       "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11501</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3498897.35</td>\n",
        "      <td>7512447.27</td>\n",
        "      <td>212.49</td>\n",
        "      <td>3.21</td>\n",
+       "      <td>PO</td>\n",
        "      <td>2.85</td>\n",
+       "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11502</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3498898.02</td>\n",
        "      <td>7512447.20</td>\n",
        "      <td>210.61</td>\n",
        "      <td>3.23</td>\n",
+       "      <td>PO</td>\n",
        "      <td>3.60</td>\n",
+       "      <td>CP</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11503</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3498898.69</td>\n",
        "      <td>7512447.12</td>\n",
        "      <td>208.73</td>\n",
        "      <td>3.24</td>\n",
+       "      <td>PO</td>\n",
        "      <td>4.00</td>\n",
+       "      <td>CP</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -196,134 +159,134 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12055</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3499181.48</td>\n",
        "      <td>7512399.35</td>\n",
        "      <td>-855.57</td>\n",
        "      <td>2.94</td>\n",
+       "      <td>PO</td>\n",
        "      <td>0.20</td>\n",
+       "      <td>CP</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12056</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3499181.95</td>\n",
        "      <td>7512399.24</td>\n",
        "      <td>-857.51</td>\n",
        "      <td>2.89</td>\n",
+       "      <td>PO</td>\n",
        "      <td>0.20</td>\n",
+       "      <td>CP</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12064</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3499185.64</td>\n",
        "      <td>7512398.31</td>\n",
        "      <td>-873.05</td>\n",
        "      <td>2.72</td>\n",
+       "      <td>PO</td>\n",
        "      <td>5.00</td>\n",
+       "      <td>CP</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12065</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3499186.10</td>\n",
        "      <td>7512398.19</td>\n",
        "      <td>-875.00</td>\n",
        "      <td>2.69</td>\n",
+       "      <td>PO</td>\n",
        "      <td>5.00</td>\n",
+       "      <td>CP</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12066</th>\n",
+       "      <td>KV139</td>\n",
        "      <td>3499186.56</td>\n",
        "      <td>7512398.08</td>\n",
        "      <td>-876.94</td>\n",
        "      <td>2.76</td>\n",
+       "      <td>PO</td>\n",
        "      <td>5.00</td>\n",
+       "      <td>CP</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>385 rows × 11 columns</p>\n",
+       "<p>385 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                X           Y       Z  Density_gcm3  Sulph1_Pct  Sulph2_Pct  \\\n",
-       "11499  3498896.02  7512447.42  216.26          2.95        1.00         1.0   \n",
-       "11500  3498896.69  7512447.35  214.38          3.01        1.10         1.0   \n",
-       "11501  3498897.35  7512447.27  212.49          3.21        2.85         1.0   \n",
-       "11502  3498898.02  7512447.20  210.61          3.23        3.60         1.8   \n",
-       "11503  3498898.69  7512447.12  208.73          3.24        4.00         2.0   \n",
-       "...           ...         ...     ...           ...         ...         ...   \n",
-       "12055  3499181.48  7512399.35 -855.57          2.94        0.20         0.1   \n",
-       "12056  3499181.95  7512399.24 -857.51          2.89        0.20         0.1   \n",
-       "12064  3499185.64  7512398.31 -873.05          2.72        5.00         0.4   \n",
-       "12065  3499186.10  7512398.19 -875.00          2.69        5.00         0.4   \n",
-       "12066  3499186.56  7512398.08 -876.94          2.76        5.00         0.4   \n",
+       "        Name           X           Y       Z  Density_gcm3 Sulph1_Code  \\\n",
+       "11499  KV139  3498896.02  7512447.42  216.26          2.95          PO   \n",
+       "11500  KV139  3498896.69  7512447.35  214.38          3.01          PO   \n",
+       "11501  KV139  3498897.35  7512447.27  212.49          3.21          PO   \n",
+       "11502  KV139  3498898.02  7512447.20  210.61          3.23          PO   \n",
+       "11503  KV139  3498898.69  7512447.12  208.73          3.24          PO   \n",
+       "...      ...         ...         ...     ...           ...         ...   \n",
+       "12055  KV139  3499181.48  7512399.35 -855.57          2.94          PO   \n",
+       "12056  KV139  3499181.95  7512399.24 -857.51          2.89          PO   \n",
+       "12064  KV139  3499185.64  7512398.31 -873.05          2.72          PO   \n",
+       "12065  KV139  3499186.10  7512398.19 -875.00          2.69          PO   \n",
+       "12066  KV139  3499186.56  7512398.08 -876.94          2.76          PO   \n",
        "\n",
-       "       Name_KV139  Sulph1_Code_CP  Sulph1_Code_PO  Sulph2_Code_CP  \\\n",
-       "11499           1               0               1               1   \n",
-       "11500           1               0               1               1   \n",
-       "11501           1               0               1               1   \n",
-       "11502           1               0               1               1   \n",
-       "11503           1               0               1               1   \n",
-       "...           ...             ...             ...             ...   \n",
-       "12055           1               0               1               1   \n",
-       "12056           1               0               1               1   \n",
-       "12064           1               0               1               1   \n",
-       "12065           1               0               1               1   \n",
-       "12066           1               0               1               1   \n",
+       "       Sulph1_Pct Sulph2_Code  Sulph2_Pct  \n",
+       "11499        1.00          CP         1.0  \n",
+       "11500        1.10          CP         1.0  \n",
+       "11501        2.85          CP         1.0  \n",
+       "11502        3.60          CP         1.8  \n",
+       "11503        4.00          CP         2.0  \n",
+       "...           ...         ...         ...  \n",
+       "12055        0.20          CP         0.1  \n",
+       "12056        0.20          CP         0.1  \n",
+       "12064        5.00          CP         0.4  \n",
+       "12065        5.00          CP         0.4  \n",
+       "12066        5.00          CP         0.4  \n",
        "\n",
-       "       Sulph2_Code_PO  \n",
-       "11499               0  \n",
-       "11500               0  \n",
-       "11501               0  \n",
-       "11502               0  \n",
-       "11503               0  \n",
-       "...               ...  \n",
-       "12055               0  \n",
-       "12056               0  \n",
-       "12064               0  \n",
-       "12065               0  \n",
-       "12066               0  \n",
-       "\n",
-       "[385 rows x 11 columns]"
+       "[385 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "encoded_data"
+    "two_composite_1covariates_1hole"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "encoded_data = two_composite_1covariates_1hole.copy()\n",
+    "\n",
+    "threshold = 10\n",
+    "\n",
+    "for column in two_composite_1covariates_1hole.columns:\n",
+    "    if two_composite_1covariates_1hole[column].dtype == 'object':\n",
+    "        unique_values = two_composite_1covariates_1hole[column].nunique()\n",
+    "        \n",
+    "        # Check if the number of unique values is within the threshold\n",
+    "        if unique_values <= threshold:\n",
+    "            # Perform one-hot encoding for columns with unique values within the threshold\n",
+    "            encoded_columns = pd.get_dummies(encoded_data[column], prefix=column)\n",
+    "            encoded_columns = encoded_columns.astype(int)  # Convert to integers (0 or 1)\n",
+    "            encoded_data = pd.concat([encoded_data, encoded_columns], axis=1)\n",
+    "            encoded_data = encoded_data.drop(columns=[column])\n",
+    "\n"
    ]
   },
   {
@@ -1355,7 +1318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
