--- a/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Dimensionality reduction one cluster.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Dimensionality reduction one cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "(7508646.604, 7514935.876)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "[81202 rows x 111 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "70"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_names = sorted_density_correlations.index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sc_ppm',\n",
+       " 'Al_pct',\n",
+       " 'Y_ppm',\n",
+       " 'V_ppm',\n",
+       " 'Sr_ppm',\n",
+       " 'Ca_pct',\n",
+       " 'P_ppm',\n",
+       " 'Si_pct',\n",
+       " 'Li_ppm',\n",
+       " 'Mg_pct',\n",
+       " 'La_ppm',\n",
+       " 'RQD_Pct',\n",
+       " 'Alt1_Int_wk',\n",
+       " 'Ba_ppm',\n",
+       " 'Sulph1_Code_PO',\n",
+       " 'IP_pct',\n",
+       " 'Sulph2_Code_CP',\n",
+       " 'Sulph2_Code_PO',\n",
+       " 'X',\n",
+       " 'PY_Total',\n",
+       " 'Z',\n",
+       " 'PO_Total',\n",
+       " 'CP_Total',\n",
+       " 'Cr_ppm',\n",
+       " 'B_ppm',\n",
+       " 'Y',\n",
+       " 'Sb_ppm',\n",
+       " 'Weathering']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
