--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/Benchmark 3D NN.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/Benchmark 3D NN.ipynb
@@ -1131,6 +1131,52 @@
     "print(f\"  STD MAE: {np.std(test_mae_list):.4f}\")\n",
     "print(f\"  STD R2: {np.std(test_r2_list):.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Feature Importance: [0.11772922 0.07480038 0.06030571 0.00727671 0.03294957 0.03488342\n",
+      " 0.08035471 0.0315744 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "# Assuming `model` is your trained neural network\n",
+    "model.eval()\n",
+    "\n",
+    "# Initialize an array to accumulate gradients for each feature\n",
+    "total_gradients = np.zeros_like(x_train[0], dtype=float)\n",
+    "\n",
+    "# Iterate over all instances to accumulate gradients\n",
+    "for instance_index in range(len(x_train)):\n",
+    "    selected_instance = torch.tensor(x_train[instance_index], dtype=torch.float32).unsqueeze(0)  # Add a batch dimension\n",
+    "    selected_instance.requires_grad_(True)\n",
+    "    \n",
+    "    # Forward pass\n",
+    "    output = model(selected_instance)\n",
+    "\n",
+    "    # Backward pass to compute gradients\n",
+    "    model.zero_grad()\n",
+    "    output.backward()\n",
+    "\n",
+    "    # Accumulate gradients for each feature\n",
+    "    total_gradients += selected_instance.grad.detach().numpy()[0]\n",
+    "\n",
+    "# Calculate feature importance as the absolute mean of gradients across instances\n",
+    "average_importance = np.abs(total_gradients / len(x_train))\n",
+    "\n",
+    "# Print or use the average_importance as needed\n",
+    "print(\"Average Feature Importance:\", average_importance)\n"
+   ]
   }
  ],
  "metadata": {
