--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_2D.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_2D.ipynb
@@ -1372,7 +1372,7 @@
     "np.random.seed(42)\n",
     "\n",
     "# Assuming deposit_data, covariates, and other necessary variables are defined\n",
-    "\n",
+    "p = len(phi_columns) + len(covariates)\n",
     "# Create an array to store metrics for each fold\n",
     "test_mse_list = []\n",
     "test_rmse_list = []\n",
@@ -1429,6 +1429,178 @@
     "        pre_test = model(torch.tensor(x_test, dtype=torch.float32))\n",
     "        mse_test = mse_loss(pre_test, torch.tensor(y_test.reshape(-1, 1), dtype=torch.float32))\n",
     "        test_losses.append(mse_test.item())\n",
+    "\n",
+    "    # Store metrics for this fold\n",
+    "    test_predictions_fold = model(torch.tensor(x_test, dtype=torch.float32)).detach().numpy().flatten()\n",
+    "    test_mse_list.append(mean_squared_error(y_test, test_predictions_fold))\n",
+    "    test_mae_list.append(mean_absolute_error(y_test, test_predictions_fold))\n",
+    "    test_r2_list.append(r2_score(y_test, test_predictions_fold))\n",
+    "\n",
+    "    # Print metrics for the current fold\n",
+    "    print(f\"\\nMetrics for Fold {fold + 1}:\")\n",
+    "    print_metrics(y_test, test_predictions_fold, \"Test\")\n",
+    "\n",
+    "# Print average metrics across folds\n",
+    "print(\"\\nAverage Metrics Across Folds:\")\n",
+    "print(f\"  Average MSE: {np.mean(test_mse_list):.4f}\")\n",
+    "print(f\"  Average MAE: {np.mean(test_mae_list):.4f}\")\n",
+    "print(f\"  Average R2: {np.mean(test_r2_list):.4f}\")\n",
+    "print(f\"  STD MSE: {np.std(test_mse_list):.4f}\")\n",
+    "print(f\"  STD MAE: {np.std(test_mae_list):.4f}\")\n",
+    "print(f\"  STD R2: {np.std(test_r2_list):.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Metrics for Fold 1:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0025\n",
+      "  RMSE: 0.0500\n",
+      "  MAE: 0.0368\n",
+      "  R^2: 0.8431\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 2:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0037\n",
+      "  RMSE: 0.0610\n",
+      "  MAE: 0.0424\n",
+      "  R^2: 0.7161\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 3:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0045\n",
+      "  RMSE: 0.0670\n",
+      "  MAE: 0.0401\n",
+      "  R^2: 0.6951\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 4:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0030\n",
+      "  RMSE: 0.0546\n",
+      "  MAE: 0.0404\n",
+      "  R^2: 0.7795\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 5:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0031\n",
+      "  RMSE: 0.0557\n",
+      "  MAE: 0.0423\n",
+      "  R^2: 0.8275\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 6:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0033\n",
+      "  RMSE: 0.0572\n",
+      "  MAE: 0.0408\n",
+      "  R^2: 0.7427\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size=100, dropout_rate=0.5):\n",
+    "        super(NeuralNetwork, self).__init__()\n",
+    "        self.layers = nn.Sequential(\n",
+    "            nn.Linear(in_features=input_size, out_features=hidden_size),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(dropout_rate),\n",
+    "            nn.BatchNorm1d(hidden_size),\n",
+    "            nn.Linear(in_features=hidden_size, out_features=hidden_size),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(dropout_rate),\n",
+    "            nn.Linear(in_features=hidden_size, out_features=hidden_size),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(hidden_size),\n",
+    "            nn.Linear(in_features=hidden_size, out_features=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.layers(x)\n",
+    "\n",
+    "def train_and_evaluate(model, train_data, test_data, num_epochs=601, lr=0.001):\n",
+    "    mse_loss = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "\n",
+    "    train_losses = []  # To store training losses during training\n",
+    "    test_losses = []   # To store test losses during training\n",
+    "\n",
+    "    # Training loop\n",
+    "    for epoch in range(num_epochs):\n",
+    "        pre = model(torch.tensor(train_data['input'], dtype=torch.float32))\n",
+    "        mse = mse_loss(pre, torch.tensor(train_data['output'].reshape(-1, 1), dtype=torch.float32))\n",
+    "        cost = mse\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        cost.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        pre_test = model(torch.tensor(test_data['input'], dtype=torch.float32))\n",
+    "        mse_test = mse_loss(pre_test, torch.tensor(test_data['output'].reshape(-1, 1), dtype=torch.float32))\n",
+    "        test_losses.append(mse_test.item())\n",
+    "\n",
+    "    return test_losses\n",
+    "\n",
+    "def print_metrics(actual, predicted, set_name):\n",
+    "    mse = mean_squared_error(actual, predicted)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    mae = mean_absolute_error(actual, predicted)\n",
+    "    r2 = r2_score(actual, predicted)\n",
+    "\n",
+    "    print(f\"Metrics for {set_name} set:\")\n",
+    "    print(f\"  MSE: {mse:.4f}\")\n",
+    "    print(f\"  RMSE: {rmse:.4f}\")\n",
+    "    print(f\"  MAE: {mae:.4f}\")\n",
+    "    print(f\"  R^2: {r2:.4f}\\n\")\n",
+    "\n",
+    "# Assuming deposit_data, covariates, and other necessary variables are defined\n",
+    "p = len(phi_columns) + len(covariates)\n",
+    "\n",
+    "# Create an array to store metrics for each fold\n",
+    "test_mse_list = []\n",
+    "test_mae_list = []\n",
+    "test_r2_list = []\n",
+    "\n",
+    "# Define the number of folds for cross-validation\n",
+    "num_folds = 10\n",
+    "kf = KFold(n_splits=num_folds, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Perform k-fold cross-validation\n",
+    "for fold, (train_index, test_index) in enumerate(kf.split(deposit_data)):\n",
+    "    train_data, test_data = deposit_data.iloc[train_index], deposit_data.iloc[test_index]\n",
+    "\n",
+    "    x_train = train_data[phi_columns + covariates].values\n",
+    "    y_train = train_data['Density_gcm3'].values\n",
+    "\n",
+    "    x_test = test_data[phi_columns + covariates].values\n",
+    "    y_test = test_data['Density_gcm3'].values\n",
+    "\n",
+    "    # Create and train the neural network\n",
+    "    model = NeuralNetwork(input_size=p)\n",
+    "    test_losses = train_and_evaluate(model, {'input': x_train, 'output': y_train}, {'input': x_test, 'output': y_test})\n",
     "\n",
     "    # Store metrics for this fold\n",
     "    test_predictions_fold = model(torch.tensor(x_test, dtype=torch.float32)).detach().numpy().flatten()\n",
