--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/Benchmark 2D NN.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/Benchmark 2D NN.ipynb
@@ -925,101 +925,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Metrics for Fold 1:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0130\n",
-      "  RMSE: 0.1140\n",
-      "  MAE: 0.0766\n",
-      "  R^2: 0.1856\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 2:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0134\n",
-      "  RMSE: 0.1157\n",
-      "  MAE: 0.0718\n",
-      "  R^2: -0.0216\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 3:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0125\n",
-      "  RMSE: 0.1117\n",
-      "  MAE: 0.0712\n",
-      "  R^2: 0.1534\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 4:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0116\n",
-      "  RMSE: 0.1078\n",
-      "  MAE: 0.0703\n",
-      "  R^2: 0.1387\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 5:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0130\n",
-      "  RMSE: 0.1141\n",
-      "  MAE: 0.0728\n",
-      "  R^2: 0.2761\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 6:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0099\n",
-      "  RMSE: 0.0997\n",
-      "  MAE: 0.0679\n",
-      "  R^2: 0.2188\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 7:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0152\n",
-      "  RMSE: 0.1231\n",
-      "  MAE: 0.0803\n",
-      "  R^2: 0.1605\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 8:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0161\n",
-      "  RMSE: 0.1269\n",
-      "  MAE: 0.0804\n",
-      "  R^2: 0.1058\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 9:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0104\n",
-      "  RMSE: 0.1020\n",
-      "  MAE: 0.0686\n",
-      "  R^2: 0.1790\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 10:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0180\n",
-      "  RMSE: 0.1340\n",
-      "  MAE: 0.0775\n",
-      "  R^2: 0.0877\n",
-      "\n",
-      "\n",
-      "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0133\n",
-      "  Average MAE: 0.0737\n",
-      "  Average R2: 0.1484\n",
-      "  STD MSE: 0.0024\n",
-      "  STD MAE: 0.0044\n",
-      "  STD R2: 0.0763\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'AttributionPriorExplainer' from 'acd' (c:\\Users\\23478671\\Anaconda3\\envs\\geostatistics\\lib\\site-packages\\acd\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\23478671\\Github\\PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation\\Paper 3 PhD BNNs for multivariate predictions\\DeepKriging\\Benchmark 2D NN.ipynb Cell 12\u001b[0m line \u001b[0;36m9\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/Benchmark%202D%20NN.ipynb#X14sZmlsZQ%3D%3D?line=86'>87</a>\u001b[0m test_r2_list\u001b[39m.\u001b[39mappend(r2_score(y_test, test_predictions_fold))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/Benchmark%202D%20NN.ipynb#X14sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m \u001b[39m# Use ACD for interpretations\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/Benchmark%202D%20NN.ipynb#X14sZmlsZQ%3D%3D?line=89'>90</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39macd\u001b[39;00m \u001b[39mimport\u001b[39;00m AttributionPriorExplainer\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/Benchmark%202D%20NN.ipynb#X14sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m explainer \u001b[39m=\u001b[39m AttributionPriorExplainer(model, method\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcd\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/Benchmark%202D%20NN.ipynb#X14sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m feature_attributions \u001b[39m=\u001b[39m explainer\u001b[39m.\u001b[39mattributions(torch\u001b[39m.\u001b[39mtensor(x_test, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat32))\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'AttributionPriorExplainer' from 'acd' (c:\\Users\\23478671\\Anaconda3\\envs\\geostatistics\\lib\\site-packages\\acd\\__init__.py)"
      ]
     }
    ],
@@ -1112,6 +1029,16 @@
     "    test_mae_list.append(mean_absolute_error(y_test, test_predictions_fold))\n",
     "    test_r2_list.append(r2_score(y_test, test_predictions_fold))\n",
     "\n",
+    "    # Use ACD for interpretations\n",
+    "    from acd import AttributionPriorExplainer\n",
+    "    explainer = AttributionPriorExplainer(model, method='cd')\n",
+    "    feature_attributions = explainer.attributions(torch.tensor(x_test, dtype=torch.float32))\n",
+    "\n",
+    "    # Print or analyze interpretations as needed\n",
+    "    print(f\"\\nFeature Attributions for Fold {fold + 1}:\")\n",
+    "    print(\"Feature Attributions:\")\n",
+    "    print(feature_attributions.numpy())\n",
+    "\n",
     "    # Print metrics for the current fold\n",
     "    print(f\"\\nMetrics for Fold {fold + 1}:\")\n",
     "    print_metrics(y_test, test_predictions_fold, \"Test\")\n",
@@ -1124,6 +1051,72 @@
     "print(f\"  STD MSE: {np.std(test_mse_list):.4f}\")\n",
     "print(f\"  STD MAE: {np.std(test_mae_list):.4f}\")\n",
     "print(f\"  STD R2: {np.std(test_r2_list):.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Feature Importance: [0.08735456 0.10275337 0.02099724 0.05438002 0.0297752  0.04849632\n",
+      " 0.03174546]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "# Assuming `model` is your trained neural network\n",
+    "model.eval()\n",
+    "\n",
+    "# Initialize an array to accumulate gradients for each feature\n",
+    "total_gradients = np.zeros_like(x_train[0], dtype=float)\n",
+    "\n",
+    "# Iterate over all instances to accumulate gradients\n",
+    "for instance_index in range(len(x_train)):\n",
+    "    selected_instance = torch.tensor(x_train[instance_index], dtype=torch.float32).unsqueeze(0)  # Add a batch dimension\n",
+    "    selected_instance.requires_grad_(True)\n",
+    "    \n",
+    "    # Forward pass\n",
+    "    output = model(selected_instance)\n",
+    "\n",
+    "    # Backward pass to compute gradients\n",
+    "    model.zero_grad()\n",
+    "    output.backward()\n",
+    "\n",
+    "    # Accumulate gradients for each feature\n",
+    "    total_gradients += selected_instance.grad.detach().numpy()[0]\n",
+    "\n",
+    "# Calculate feature importance as the absolute mean of gradients across instances\n",
+    "average_importance = np.abs(total_gradients / len(x_train))\n",
+    "\n",
+    "# Print or use the average_importance as needed\n",
+    "print(\"Average Feature Importance:\", average_importance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CP_Total', 'PO_Total', 'PY_Total', 'RQD_Pct', 'Cr_ppm']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covariates"
    ]
   }
  ],
