--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_3D.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_3D.ipynb
@@ -1257,101 +1257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Metrics for Fold 1:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0031\n",
-      "  RMSE: 0.0561\n",
-      "  MAE: 0.0405\n",
-      "  R^2: 0.8029\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 2:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0031\n",
-      "  RMSE: 0.0558\n",
-      "  MAE: 0.0364\n",
-      "  R^2: 0.7624\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 3:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0033\n",
-      "  RMSE: 0.0578\n",
-      "  MAE: 0.0409\n",
-      "  R^2: 0.7733\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 4:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0029\n",
-      "  RMSE: 0.0536\n",
-      "  MAE: 0.0395\n",
-      "  R^2: 0.7872\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 5:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0035\n",
-      "  RMSE: 0.0591\n",
-      "  MAE: 0.0407\n",
-      "  R^2: 0.8057\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 6:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0028\n",
-      "  RMSE: 0.0526\n",
-      "  MAE: 0.0379\n",
-      "  R^2: 0.7825\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 7:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0029\n",
-      "  RMSE: 0.0539\n",
-      "  MAE: 0.0413\n",
-      "  R^2: 0.8391\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 8:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0025\n",
-      "  RMSE: 0.0498\n",
-      "  MAE: 0.0368\n",
-      "  R^2: 0.8621\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 9:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0034\n",
-      "  RMSE: 0.0585\n",
-      "  MAE: 0.0414\n",
-      "  R^2: 0.7303\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 10:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0039\n",
-      "  RMSE: 0.0624\n",
-      "  MAE: 0.0463\n",
-      "  R^2: 0.8022\n",
-      "\n",
-      "\n",
-      "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0031\n",
-      "  Average MAE: 0.0402\n",
-      "  Average R2: 0.7947\n",
-      "  STD MSE: 0.0004\n",
-      "  STD MAE: 0.0027\n",
-      "  STD R2: 0.0355\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\23478671\\Github\\PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation\\Paper 3 PhD BNNs for multivariate predictions\\DeepKriging\\DeepKriging_3D.ipynb Cell 17\u001b[0m line \u001b[0;36m7\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/DeepKriging_3D.ipynb#Y120sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m \u001b[39m# Training loop\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/DeepKriging_3D.ipynb#Y120sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m601\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/DeepKriging_3D.ipynb#Y120sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m     pre \u001b[39m=\u001b[39m model(torch\u001b[39m.\u001b[39;49mtensor(x_train, dtype\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mfloat32))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/DeepKriging_3D.ipynb#Y120sZmlsZQ%3D%3D?line=71'>72</a>\u001b[0m     mse \u001b[39m=\u001b[39m mse_loss(pre, torch\u001b[39m.\u001b[39mtensor(y_train\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m), dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat32))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/23478671/Github/PhD-Thesis---Incorporating-Deep-Learning-into-Statistical-Models-for-Spatial-Interpolation/Paper%203%20PhD%20BNNs%20for%20multivariate%20predictions/DeepKriging/DeepKriging_3D.ipynb#Y120sZmlsZQ%3D%3D?line=72'>73</a>\u001b[0m     cost \u001b[39m=\u001b[39m mse\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1444,6 +1361,17 @@
     "    test_mae_list.append(mean_absolute_error(y_test, test_predictions_fold))\n",
     "    test_r2_list.append(r2_score(y_test, test_predictions_fold))\n",
     "\n",
+    "    # Use ACD for interpretations\n",
+    "    from acd import AttributionPriorExplainer\n",
+    "    explainer = AttributionPriorExplainer(model, method='cd')\n",
+    "    feature_attributions = explainer.attributions(torch.tensor(x_test, dtype=torch.float32))\n",
+    "\n",
+    "    # Print or analyze interpretations as needed\n",
+    "    print(f\"\\nFeature Attributions for Fold {fold + 1}:\")\n",
+    "    print(\"Feature Attributions:\")\n",
+    "    print(feature_attributions.numpy())\n",
+    "\n",
+    "\n",
     "    # Print metrics for the current fold\n",
     "    print(f\"\\nMetrics for Fold {fold + 1}:\")\n",
     "    print_metrics(y_test, test_predictions_fold, \"Test\")\n",
@@ -1508,6 +1436,13 @@
     "  \\\n",
     "  STD MSE: 0.0004"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
