--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_2D.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_2D.ipynb
@@ -1506,7 +1506,47 @@
       "  RMSE: 0.0572\n",
       "  MAE: 0.0408\n",
       "  R^2: 0.7427\n",
-      "\n"
+      "\n",
+      "\n",
+      "Metrics for Fold 7:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0037\n",
+      "  RMSE: 0.0612\n",
+      "  MAE: 0.0437\n",
+      "  R^2: 0.7923\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 8:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0060\n",
+      "  RMSE: 0.0773\n",
+      "  MAE: 0.0526\n",
+      "  R^2: 0.6685\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 9:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0035\n",
+      "  RMSE: 0.0593\n",
+      "  MAE: 0.0428\n",
+      "  R^2: 0.7222\n",
+      "\n",
+      "\n",
+      "Metrics for Fold 10:\n",
+      "Metrics for Test set:\n",
+      "  MSE: 0.0037\n",
+      "  RMSE: 0.0609\n",
+      "  MAE: 0.0430\n",
+      "  R^2: 0.8115\n",
+      "\n",
+      "\n",
+      "Average Metrics Across Folds:\n",
+      "  Average MSE: 0.0037\n",
+      "  Average MAE: 0.0425\n",
+      "  Average R2: 0.7599\n",
+      "  STD MSE: 0.0009\n",
+      "  STD MAE: 0.0039\n",
+      "  STD R2: 0.0564\n"
      ]
     }
    ],
