--- a/Paper 3 PhD BNNs for multivariate predictions/NN only spatial/NN 1D 1 hole.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN only spatial/NN 1D 1 hole.ipynb
@@ -1145,30 +1145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-c57aad8c8cf18739\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-c57aad8c8cf18739\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 5001;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "Launching TensorBoard..."
       ]
      },
      "metadata": {},
