--- a/Paper 3 PhD BNNs for multivariate predictions/EDAs and data processing/EDA on mineralogy and sulphides.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/EDAs and data processing/EDA on mineralogy and sulphides.ipynb
@@ -43,6 +43,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "622"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_composite_filtered['Name'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -2069,7 +2089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
