--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_3D.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming deposit_data_selected is the DataFrame you want to save\n",
-    "deposit_data.to_csv('final_dataset.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "density_data = pd.read_csv(\"../Curated_data/cluster_0_data.csv\", low_memory=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density_data = pd.read_csv(\"../Curated_data/final_dataset.csv\", low_memory=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1369,20 +1359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "masker = shap.maskers.Partition(X, clustering=partition_tree)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masker_explainer = shap.PartitionExplainer(model, masker)\n"
+    "gftg\n"
    ]
   },
   {
@@ -1445,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2358,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2574,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2710,101 +2691,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Metrics for Fold 1:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0142\n",
-      "  RMSE: 0.1191\n",
-      "  MAE: 0.0762\n",
-      "  R^2: 0.1108\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 2:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0134\n",
-      "  RMSE: 0.1156\n",
-      "  MAE: 0.0771\n",
-      "  R^2: -0.0197\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 3:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0147\n",
-      "  RMSE: 0.1211\n",
-      "  MAE: 0.0784\n",
-      "  R^2: 0.0049\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 4:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0131\n",
-      "  RMSE: 0.1143\n",
-      "  MAE: 0.0756\n",
-      "  R^2: 0.0319\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 5:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0181\n",
-      "  RMSE: 0.1344\n",
-      "  MAE: 0.0844\n",
-      "  R^2: -0.0050\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 6:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0124\n",
-      "  RMSE: 0.1114\n",
-      "  MAE: 0.0744\n",
-      "  R^2: 0.0239\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 7:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0184\n",
-      "  RMSE: 0.1358\n",
-      "  MAE: 0.0853\n",
-      "  R^2: -0.0210\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 8:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0180\n",
-      "  RMSE: 0.1341\n",
-      "  MAE: 0.0846\n",
-      "  R^2: 0.0012\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 9:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0126\n",
-      "  RMSE: 0.1124\n",
-      "  MAE: 0.0733\n",
-      "  R^2: 0.0039\n",
-      "\n",
-      "\n",
-      "Metrics for Fold 10:\n",
-      "Metrics for Test set:\n",
-      "  MSE: 0.0177\n",
-      "  RMSE: 0.1330\n",
-      "  MAE: 0.0824\n",
-      "  R^2: 0.1008\n",
-      "\n",
-      "\n",
-      "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0153\n",
-      "  Average MAE: 0.0792\n",
-      "  Average R2: 0.0232\n",
-      "  STD MSE: 0.0024\n",
-      "  STD MAE: 0.0043\n",
-      "  STD R2: 0.0442\n"
+     "ename": "NameError",
+     "evalue": "name 'deposit_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [5], line 66\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m output\n\u001b[0;32m     65\u001b[0m \u001b[38;5;66;03m# Perform k-fold cross-validation\u001b[39;00m\n\u001b[1;32m---> 66\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fold, (train_index, test_index) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(kf\u001b[38;5;241m.\u001b[39msplit(\u001b[43mdeposit_data\u001b[49m)):\n\u001b[0;32m     67\u001b[0m     train_data, test_data \u001b[38;5;241m=\u001b[39m deposit_data\u001b[38;5;241m.\u001b[39miloc[train_index], deposit_data\u001b[38;5;241m.\u001b[39miloc[test_index]\n\u001b[0;32m     69\u001b[0m     x_train_phi \u001b[38;5;241m=\u001b[39m train_data[phi_columns]\u001b[38;5;241m.\u001b[39mvalues\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'deposit_data' is not defined"
      ]
     }
    ],
